--- a/index.html
+++ b/index.html
@@ -5,25 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="stylesheet" href="./assets/styles/bootstrap.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../assets/img/suerytex.jpeg" type="image/x-icon">
     <title>SueryTex</title>
 </head>
 <body>
     <header>
-        <div class="container">
-            <a href="index.html"><img src="./assets/img/suerytex.jpeg" alt="SueryTex" class="logo"></a>
-            <nav class="nav">
-                <a href="./index.html">Pagina principal</a>
-                <a href="./pages/productos.html">Productos</a>
-                <a href="./pages/ofertas.html">Ofertas</a>
-                <a href="./pages/nuevo.html">¡Nuevo!</a>
-                <a href="#inicio">Inicio</a>
-            </nav>
-        
-        </div>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand logo" href="./index.html" style="margin-right: 600px; margin-left: 250px; "><img src="./assets/img/suerytex.jpeg" class="suerytex-logo"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#" style="color:#1466ff">Inicio</a>
+                  </li>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Productos
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./pages/productos.html">Todos los productos</a></li>
+                      <li><a class="dropdown-item" href="./pages/ofertas.html">Ofertas</a></li>
+                      <li><a class="dropdown-item" href="./pages/nuevo.html">Nuevo</a></li>
+                    </ul>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contatco</a>
+                  </li>
+                </ul>
+
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main>
@@ -47,5 +75,6 @@
     <footer>
         <h1>a</h1>
     </footer>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
