responsive mas las paginas nuevas menos contacto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -75,8 +75,8 @@
                                 
                                 <div class="card-body">
                                     <h5 class="card-title">titulo</h5>
-                                    <p class="card-text">Precio: </p>
-                                    <p class="card-text">Stock: </p>
+                                    <p class="card-text">Precio:<strong>3800$</strong> </p>
+                                    <p class="card-text">Stock: <strong>50Mts</strong></p>
                                     <a href="#" class="btn btn-primary">Agregar al carro</a>
                                 </div>
                             </div>
@@ -88,8 +88,8 @@
                                 
                                 <div class="card-body">
                                     <h5 class="card-title">titulo</h5>
-                                    <p class="card-text">Precio: </p>
-                                    <p class="card-text">Stock: </p>
+                                    <p class="card-text">Precio:<strong>3800$</strong> </p>
+                                    <p class="card-text">Stock:<strong>50Mts</strong> </p>
                                     <a href="#" class="btn btn-primary">Agregar al carro</a>
                                 </div>
                             </div>
