--- a/pages/productos.html
+++ b/pages/productos.html
@@ -162,7 +162,7 @@
                                         class="card-img-top" alt="imagen tela para vestido azul">
                                     
                                 <div class="card-body">
-                                    <h5 class="card-title">Tela para vestido color azul</h5>
+                                    <h5 class="card-title">Tela para vestido color azul semi oscuro</h5>
                                     <p>Seleccione una cantidad <select id="cantidad-precio5">
                                         <option value="1000">1 metro</option>
                                         <option value="3000">10 metros</option>
