--- a/pages/productos.html
+++ b/pages/productos.html
@@ -116,7 +116,7 @@
                                     class="card-img-top" alt="imagen surtido Poliester">
                                 
                                 <div class="card-body">
-                                    <h5 class="card-title">Surtido Poliester 8 colores</h5>
+                                    <h5 class="card-title">Surtido Poliester 8 colores distintos</h5>
                                     <p>Seleccione una cantidad <select id="cantidad-precio3">
                                         <option value="800">1 metro</option>
                                         <option value="2500">10 metros</option>
@@ -138,7 +138,7 @@
                                     class="card-img-top" alt="imagen tela para vestido rojo">
                                 
                                 <div class="card-body">
-                                    <h5 class="card-title">Tela para vestido color rojo</h5>
+                                    <h5 class="card-title">Tela para vestido color rojo claro</h5>
                                     <p>Seleccione una cantidad <select id="cantidad-precio4">
                                         <option value="800">1 metro</option>
                                         <option value="2500">10 metros</option>
